"""Targets in the workspace root"""

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")
load("@rules_gzip//gzip/compress:defs.bzl", "gzip_compress")

npm_link_all_packages()

pkg_files(
    name = "editor-in-fork",
    srcs = [
        "//onlyoffice-editor:api",
    ],
    prefix = "web-apps/apps/api/documents/",
    strip_prefix = strip_prefix.from_pkg("api"),
)

pkg_files(
    name = "client-in-fork",
    srcs = [
        "//sdkjs:make",
    ],
    strip_prefix = strip_prefix.from_pkg("make"),
)

pkg_zip(
    name = "oofork",
    package_file_name = "onlyoffice-editor.zip",
    srcs = [
        "//:editor-in-fork",
        "//:client-in-fork",
        "//fonts:fonts",
        "//vendor:files",
        "//dictionaries:files",
    ],
    visibility = ["//visibility:public"],
)

sh_test(  # TODO can I use this here? https://docs.aspect.build/rulesets/aspect_bazel_lib/docs/testing#assert_directory_contains
    name = "oofork-files-test",
    size = "small",
    srcs = ["test-oofork-files.sh"],
    data = [":oofork"],
)
