"""Targets in the workspace root"""

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")
load("@rules_gzip//gzip/compress:defs.bzl", "gzip_compress")

npm_link_all_packages()

filegroup(
    name = "editorconfig",
    srcs = [".editorconfig"],
    visibility = ["//visibility:public"],
)

#pkg_zip(
#    name = "oofork",
#    package_file_name = "onlyoffice-editor.zip",
#    srcs = [
#        "//:editor-in-fork",
#        "//:client-in-fork",
#        "//fonts:fonts",
#        "//vendor:files",
#        "//dictionaries:files",
#    ],
#    visibility = ["//visibility:public"],
#)

genrule(
    name = "oofork",
    srcs = [
        "//onlyoffice-editor:api",
        "//sdkjs:make",
        "//fonts:fonts",
        "//vendor:files",
        "//dictionaries:files",
    ],
    #cmd = "zip -r $@ $(location //onlyoffice-editor:api)",
    cmd = """
        mkdir -p "$(@D)/tmp/web-apps/apps/api/documents/"
        #cp -Lr $(location //onlyoffice-editor:api)/api.js "$(@D)/tmp/web-apps/apps/api/documents/"
        #cp -Lr $(location //sdkjs:make)/* "$(@D)/tmp/"
        #mkdir -p "$(@D)/tmp/fonts"
        #cp -Lr $(locations //fonts:fonts) "$(@D)/tmp/fonts"
        #cp -Lr $(locations //vendor:files) "$(@D)/tmp"
        mkdir -p "$(@D)/tmp/dictionaries"
        cp -Lr --parents $(locations //dictionaries:files)/dictionaries "$(@D)/tmp/dictionaries"
        cd "$(@D)/tmp"
        zip -r ../onlyoffice-editor.zip .
        rm -rf "$(@D)/tmp"
    """,
    outs = ["onlyoffice-editor.zip"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "oofork-sha512sum",
    srcs = [
        "//:oofork",
    ],
    cmd = "sha512sum $(location :oofork) > $@",
    outs = ["onlyoffice-editor.zip.sha512"],
)

sh_test(  # TODO can I use this here? https://docs.aspect.build/rulesets/aspect_bazel_lib/docs/testing#assert_directory_contains
    name = "oofork-files-test",
    size = "small",
    srcs = ["test-oofork-files.sh"],
    data = [":oofork"],
)
