bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc5")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "rules_multitool", version = "0.12.0")
bazel_dep(name = "aspect_rules_js", version = "2.0.1")
bazel_dep(name = "aspect_rules_ts", version = "3.0.0-rc1")
bazel_dep(name = "aspect_rules_webpack", version = "0.16.0-rc0")
bazel_dep(name = "aspect_rules_jasmine", version = "2.0.0-rc0")
bazel_dep(name = "rules_tar", version = "1.0.0-beta.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_gzip", version = "1.0.0-beta.1")
bazel_dep(name = "rules_oci", version = "2.0.0-beta1")
bazel_dep(name = "rules_nodejs", version = "6.2.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.14.0")

use_repo(node, "nodejs")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "onlyoffice-documentserver",
    digest = "sha256:1e254eee17380a63dec421fb77f3cb1c1131feeadbd31a2e7c01c21e1cf1335f",  # Version 7.3.3
    image = "docker.io/onlyoffice/documentserver",
    platforms = ["linux/amd64"],
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "onlyoffice-documentserver", "onlyoffice-documentserver_linux_amd64")  # TODO can we remove the last parameter?

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to run the same pnpm version that Bazel manages
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    bins = {
        "playwright": [
            "playwright=./cli.js",
        ],
    }
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
