load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")

filegroup(
    name = "dicionaries-root",
    srcs = glob(["**"]),
)

pkg_files(
    name = "files",
    srcs = [
        ":dicionaries-root",
    ],
    prefix = "dicionaries/",
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//visibility:public"],
)
