load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")

filegroup(
    name = "dictionaries-root",
    srcs = glob(["**"]),
)

pkg_files(
    name = "files",
    srcs = [
        ":dictionaries-root",
    ],
    prefix = "dictionaries/",
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//visibility:public"],
)
