load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

jasmine_test(
    name = "test",
    args = ["*.spec.js"],
    chdir = package_name(),
    data = [
        "test.spec.js",
        "package.json",
        ":node_modules/testcontainers",
        ":node_modules/node-fetch",
        ":node_modules/jsdom",
        ":node_modules/canvas",
        "//docker:image-tarball",
    ],
    node_modules = ":node_modules",
)

sh_test(
    name = "test-test",
    srcs = ["run-tests.sh"],
    args = ["$(execpath @nodejs//:npm)"],
    data = [
        "package.json",
        "@nodejs//:npx",
        "@nodejs//:npm",
        ":node_modules/@playwright",
        ":node_modules/playwright",
    ],
)
