load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test", "js_run_binary")

npm_link_all_packages()

js_binary(
    name = "playwright-run",
    entry_point = "playwright-run.mjs",
    include_npm = True,
    data = [
        ":node_modules/playwright",
    ],
)

# Disabled, since we do not plan to use the fork together with the OO documentserver right now
# js_test(
#     name = "playwright-test",
#     entry_point = "playwright-test.mjs",
#     include_npm = True,
#     env = {
#         #"BROWSERS_PATH": "@(location :cache-ms-playwright)",
#         "BROWSERS_PATH": "@(location playwright-test.mjs)",
#     },
#     expand_env = True,
#     data =
#         glob(["tests/**/*.spec.js"]) + [
#             "playwright.config.cjs",
#             ":node_modules/playwright",
#             ":node_modules/@playwright/test",
#             ":node_modules/testcontainers",
#             ":cache-ms-playwright",
#             "//docker:image-tarball",
#         ],
# )

js_run_binary(
    name = "cache-ms-playwright",
    tool = ":playwright-run",
    args = ["$(@D)", "install"],
    out_dirs = ["ms-playwright"],
)
